--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "final-server.js": {
+      "maxDuration": 30
+    }
   }
 }
