🧹 Clean up unwanted files from main directory
Removed:
- Test files (debug-test.html, mobile-test.html, test-auth.html, etc.)
- Old server files (index.js, server.js, simple-server.js, working-server.js)
- Old chatbot (simple-chatbot.js)
- Old user service (userService.js)
- React build files (App.tsx, components/, src/, vite.config.ts, etc.)
- Old frontend (react-frontend.html, frontend/ folder)
- Duplicate docs (VERCEL_DEPLOYMENT.md, DEPLOYMENT.md)
- Unused config files (jsconfig.json, postcss.config.js, etc.)
- bun.lock (using npm)

Updated:
- .gitignore to exclude database files and lock files

Project is now clean and ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Lock files (keep package-lock.json, ignore bun.lock if using npm)
+bun.lock
+yarn.lock
+pnpm-lock.yaml
