--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "echo 'No build needed - using static files and serverless functions'",
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30
