🔧 Fix Vercel deployment - configure for static files + serverless
- Add simple build script that exits successfully
- Remove buildCommand from vercel.json (let Vercel auto-detect)
- Add rewrites to serve index.html for root route
- Update .gitignore to exclude Vercel output files
- Add .vercelignore for deployment

This should fix the 'No Output Directory named dist' error.
Vercel will serve static files from root and serverless functions from /api.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "start": "node final-server.js",
-    "prod": "NODE_ENV=production node final-server.js"
+    "prod": "NODE_ENV=production node final-server.js",
+    "build": "echo 'Static files - no build needed'"
   },
   "dependencies": {
     "@tavily/core": "^0.5.12",
